--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gorkem Ozden</title>
-</head>
-<body>
-    <h1>Gorkem Ozden</h1>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Görkem Özden's Home Page</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>Görkem Özden</h1>
+						Computer Engineering Student
+						<nav>
+							<ul>
+								<li><a href="https://www.linkedin.com/in/gorkem-ozden/" class="icon brands fa-linkedin"><span class="label">fa-linkedin</span></a></li>
+								<li><a href="https://github.com/gorkemozden" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://x.com/gorkemozdn" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.instagram.com/gorkemozdn/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="mailto:gorkem@ozden.tech" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</nav>
+					</header>
+
+			</div>
+		</div>
+		<script>
+			window.onload = function() { document.body.classList.remove('is-preload'); }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
