--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ https://templatemo.com/tm-531-reflux
 
             <p>
               Personal Phone Number : +90 534 383 8078 <br><br>
-              Personal Email Address : gorkem@ozden.tech <br><br>
+              Personal Email: <a href="mailto:gorkem@ozden.tech">gorkem@ozden.tech</a> <br><br>
               <br>
               &nbsp;
               <a style=color:aqua href="https://www.linkedin.com/in/gorkem-ozden/"><i class="fa fa-linkedin fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
