--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ https://templatemo.com/tm-531-reflux
             <br>
 
             <p>
-              Personal Phone Number : +90 534 383 8078 <br><br>
-              Personal Email: <a href="mailto:gorkem@ozden.tech">gorkem@ozden.tech</a> <br><br>
+              Personal Phone Number: +90 534 383 8078 <br><br>
+              Personal Email Address: <a href="mailto:gorkem@ozden.tech">gorkem@ozden.tech</a> <br><br>
               <br>
               &nbsp;
               <a style=color:aqua href="https://www.linkedin.com/in/gorkem-ozden/"><i class="fa fa-linkedin fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
