--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ https://templatemo.com/tm-531-reflux
             <h2>My Resume</h2>
             <div class="line-dec"></div>
             <br>
-            <iframe src="gorkem-ozden-resume.pdf" width="95%" height="1200px"></iframe>
-            <a href="gorkem-ozden-resume.pdf" download class="resume-btn">Download My Resume</a>
+            <iframe src="Gorkem_Ozden_Intern_Resume.pdf" width="95%" height="1200px"></iframe>
+            <a href="Gorkem_Ozden_Intern_Resume.pdf" download class="resume-btn">Download My Resume</a>
             <span>       
           </div>
         </div>
