CV and home screen is updated.

--- a/index.html
+++ b/index.html
@@ -82,10 +82,11 @@ https://templatemo.com/tm-531-reflux
             <div class="line-dec"></div>
             <br>
             <span>
-              My name is Görkem Özden, I am a second-year computer engineering student in Muğla Sıtkı Koçman University. 
-              <br>I am familiar with Python, Java, Assembly, C, C#, C++, HTML, CSS and JavaScript. 
-              I have enthusiasm for AR and VR technologies, artificial intelligence, mobile app and game development. 
-              I'm eager to contribute to real-world projects while sharpening my skills and grow as a developer through an internship.
+              3rd-year Computer Engineering student skilled in Python, Java, C/C++ and Full Stack 
+basics (HTML/CSS/JS). I have developed a native Android app using Java, launched a 
+personal website, and trained ML agents using Scikit-learn and TensorFlow. I am looking to 
+join an engineering team as an intern, where I can contribute to ongoing projects and support 
+the software development lifecycle with my technical skillset.
             </span>
           </div>
         </div>
@@ -144,14 +145,14 @@ https://templatemo.com/tm-531-reflux
 
             <p>
               Personal Phone Number: +90 534 383 8078 <br><br>
-              Personal Email Address: <a href="mailto:gorkem@ozden.tech">gorkem@ozden.tech</a> <br><br>
+              Personal Email Address: <a href="mailto:contact@gorkemozden.com">contact@gorkemozden.com</a> <br><br>
               <br>
               &nbsp;
               <a style=color:aqua href="https://www.linkedin.com/in/gorkem-ozden/"><i class="fa fa-linkedin fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a style=color:aqua href="https://github.com/gorkemozden"><i class="fa fa-github fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a style=color:aqua href="https://www.instagram.com/gorkemozdn/"><i class="fa fa-instagram fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a style=color:aqua href="https://www.instagram.com/gorkem0zden/"><i class="fa fa-instagram fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a style=color:aqua href="https://x.com/gorkemozdn"><i class="fa fa-twitter fa-2x"></i></a>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a style=color:aqua href="mailto:gorkem@ozden.tech" class="fa fa  fa-envelope fa-2x"></a>
+              <a style=color:aqua href="mailto:contact@gorkemozden.com" class="fa fa  fa-envelope fa-2x"></a>
               
             </p>  
           </p> <i>Click on the logos to access.</i>  </p>
