--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ the software development lifecycle with my technical skillset.
             <div class="line-dec"></div>
             <br>
             <iframe src="Gorkem_Ozden_Intern_Resume.pdf" width="95%" height="1200px"></iframe>
-            <a href="Gorkem_Ozden_Intern_Resume.pdf" download class="resume-btn">Download My Resume</a>
+            <a href="Gorkem_Ozden_Intern_Resume.pdf?v=2" download class="resume-btn">Download My Resume</a>
             <span>       
           </div>
         </div>
