--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ the software development lifecycle with my technical skillset.
             <h2>My Resume</h2>
             <div class="line-dec"></div>
             <br>
-            <iframe src="Gorkem_Ozden_Intern_Resume.pdf" width="95%" height="1200px"></iframe>
-            <a href="Gorkem_Ozden_Intern_Resume.pdf?v=2" download class="resume-btn">Download My Resume</a>
+            <iframe src="Gorkem_Ozden_Intern_Resume_EN.pdf" width="95%" height="1200px"></iframe>
+            <a href="Gorkem_Ozden_Intern_Resume_EN.pdf" download class="resume-btn">Download My Resume</a>
             <span>       
           </div>
         </div>
